Switch to record (#489)
* Convert CompilableExpression to record

* Convert Scope to record

* Overshadow immutable implementation of ItemStates

* Convert RowGroupItemsInitEventsProvider to record

* Convert RuleExpressionCompilerError to record

* Convert DynamicTrigger and StaticTrigger to record

* Remove dead code

* Convert Event types to record

* Convert EventProvider types to record

* Convert ValueSet to record

* Convert ConfiguredFunction to record

* Convert ProgramNodes to record

* Convert ArrayReducerOperator to record

* Convert BinaryOperator to record

* Convert VariableReference to record

* Convert IsAnyInvalidAnswersOperator, IsOnFirstPage, IsOnLastPage, LanguageExpression, NowExpression and TodayExpression to record

* Convert Constant to record

* Convert InfixOperators to record

* Convert Events to record

* Convert operators to record

* Convert operators to record

* Convert user model to record

* Convert commands to record

* Convert MetadataRow and AsyncFunctionCall to record

* Convert PageAttributes to record

* Convert ItemStates to record

* Do not use arrays types on record to enforce immutability.

* Add sessionId parameter to clientConnected method and update event publishing

* Remove varargs from function invocation

* Remove unused code

ReduceOperators.java